--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
     "paper-slider": "PolymerElements/paper-slider#^1.0.9",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
   }
 }
