--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,12 @@
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "iron-splitter": "https://github.com/JC-Orozco/iron-splitter",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
     "paper-slider": "PolymerElements/paper-slider#^1.0.9",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.3"
   }
 }
