--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.3"
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.3",
+    "iron-localstorage": "^1.0.5"
   }
 }
