--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.3",
-    "iron-localstorage": "^1.0.5"
+    "iron-localstorage": "^1.0.5",
+    "iron-list": "PolymerElements/iron-list#^1.2.8"
   }
 }
