--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.3",
     "iron-localstorage": "^1.0.5",
-    "iron-list": "PolymerElements/iron-list#^1.2.8"
+    "iron-list": "PolymerElements/iron-list#^1.2.8",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2"
   }
 }
