--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "iron-list": "PolymerElements/iron-list#^1.2.8",
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
     "iron-a11y-keys": "PolymerElements/iron-a11y-keys#^1.0.4",
-    "iron-a11y-keys-behavior": "https://github.com/d1manson/iron-a11y-keys-behavior.git#1.1.3"
+    "iron-a11y-keys-behavior": "https://github.com/d1manson/iron-a11y-keys-behavior.git#1.1.3",
+    "paper-button": "PolymerElements/paper-button#^1.0.11"
   }
 }
