--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
     "iron-a11y-keys": "PolymerElements/iron-a11y-keys#^1.0.4",
     "iron-a11y-keys-behavior": "https://github.com/d1manson/iron-a11y-keys-behavior.git#1.1.3",
-    "paper-button": "PolymerElements/paper-button#^1.0.11"
+    "paper-button": "PolymerElements/paper-button#^1.0.11",
+    "iron-splitter": "https://github.com/d1manson/iron-splitter.git#1.0.1-rc"
   }
 }
