--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,13 @@
   "name": "waveform",
   "homepage": "https://github.com/d1manson/waveform",
   "authors": [
-    "Daniel Manson <d.manson.11@ucl.ac.uk>"
+    "Daniel Manson <danielmanson.uk@gmail.com>"
   ],
   "description": "",
   "main": "",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
+    "polymer": "Polymer/polymer#^1.7",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
     "paper-slider": "PolymerElements/paper-slider#^1.0.9",
@@ -23,6 +23,7 @@
     "iron-a11y-keys-behavior": "https://github.com/d1manson/iron-a11y-keys-behavior.git#1.1.3",
     "paper-button": "PolymerElements/paper-button#^1.0.11",
     "iron-splitter": "https://github.com/d1manson/iron-splitter.git#1.0.1-rc",
-    "paper-toast": "PolymerElements/paper-toast#^1.2.2"
+    "paper-toast": "PolymerElements/paper-toast#^1.2.2",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23"
   }
 }
