--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "The application is available live at [d1manson.github.io/waveform](http://d1manson.github.io/waveform).",
   "main": "electron-entrypoint.js",
-  "dependencies": {},
+  "dependencies": {
+    "electron-prompt": "^1.6.0"
+  },
   "devDependencies": {
     "electron": "^1.7.0"
   },
